--- a/Stylesheets/_index.scss
+++ b/Stylesheets/_index.scss
@@ -5,7 +5,7 @@
 		background-size: cover;
 	}
 	#item-2 {
-		background-image: url(../Assets/me.jpg);
+		background-image: url(../Assets/me.JPG);
 		background-position: center;
 		background-size: cover;
 	}
