--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -7,7 +7,7 @@
   background-position: center;
   background-size: cover; }
 .row #item-2 {
-  background-image: url(../Assets/me.jpg);
+  background-image: url(../Assets/me.JPG);
   background-position: center;
   background-size: cover; }
 .row #item-3 {
