Small aesthetic and quote changes.

--- a/Stylesheets/_experiences.scss
+++ b/Stylesheets/_experiences.scss
@@ -1,6 +1,6 @@
 #experiences-hero {
-	background-image: url(../Assets/computer.jpg);
-	background-position: top;
+	background-image: url(../Assets/me.jpeg);
+	background-position: center;
 }
 
 body{
@@ -10,3 +10,4 @@ body{
 .container {
 
 }
+ 
