--- a/Stylesheets/main.scss
+++ b/Stylesheets/main.scss
@@ -171,12 +171,12 @@ input[type="button" i] {
 
 h1 {
 	text-align: center;
-	//padding: 47px;
+	text-transform: uppercase;
 	margin: 0;
 	color: #3A0000;
 	letter-spacing: 4px;
 	line-height: 2;
-	text-shadow: 5px 0px #F5C936;
+	text-shadow: 2px 2px #F5C936;
 }
 
 ul, li {
