--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -141,8 +141,7 @@ div.footer {
 
 body {
   padding: 0;
-  margin: 0;
-  background-color: white; }
+  margin: 0; }
 
 .container {
   width: 100%;
@@ -189,8 +188,7 @@ nav {
       margin-left: 3%; }
 
 .content {
-  margin: 5% 28%;
-  padding: 5%;
+  padding: 5% 28%;
   background: black; }
   .content h1, .content h2, .content h3, .content h4, .content h5, .content h6, .content a, .content p, .content li {
     color: ghostwhite;
@@ -298,7 +296,7 @@ ul, li {
 
 @media only screen and (max-width: 800px) {
   div.content {
-    margin: 1%; }
+    padding: 4%; }
 
   .container-1 {
     padding: 0;
