--- a/Stylesheets/main.scss
+++ b/Stylesheets/main.scss
@@ -12,7 +12,6 @@
 body {
 	padding: 0;
 	margin: 0;
-	background-color: white;
 }
 
 .container { 
@@ -30,7 +29,7 @@ nav {
 		color: #3A0000;
     text-decoration: none;
     font-weight: bolder;
-		font-size: 3vmin;
+		font-size: 3vmin; 
 	}
 }
 
@@ -67,8 +66,8 @@ nav {
 }
 
 .content {
-	margin: 5% 28%;
-	padding: 5%;
+	padding: 5% 28%;
+	//padding: 5%;
 	background: black;
 	h1, h2, h3, h4, h5, h6, a, p, li {
 		color: ghostwhite;
@@ -202,7 +201,7 @@ ul, li {
 
 @media only screen and (max-width: 800px) {
 	div.content {
-		margin: 1%; 
+		padding: 4%; 
 	}
 	.container-1 {
 		padding: 0;
